optimizing code, deleting some comments, reput static variables