@@ -9,7 +9,6 @@ import org.mapstruct.Mapper;
 import org.springframework.data.domain.Page;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface IRestaurantMapper {
@@ -23,7 +22,7 @@ public interface IRestaurantMapper {
     default RestaurantListResponseDto toListResponseDto(Page<RestaurantModel> page) {
         List<RestaurantLiteResponseDto> content = page.getContent().stream()
             .map(this::toLiteResponseDto)
-            .collect(Collectors.toList());
+            .toList();
 
         RestaurantListResponseDto response = new RestaurantListResponseDto();
         response.setContent(content);
